-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.0
-
None
-
-
0e58b3db346c70babf10ffa8c813452cda65626c 53d297af05a15acaa8dbee8d3afbfd2785fbc2f5 (qt/qtbase/6.2)
Image is not loaded and produces an error on Qt 6.2.0
"qt.network.http2: stream 1 finished with error: "Flow control error""
Reproduced at least on Windows 10 and macOS 10.15
import QtQuick 2 import QtQuick.Window 2 Window { width: 640 height: 480 visible: true Image { anchors.fill: parent source: "https://static-maps.yandex.ru/1.x?size=390%2C260&l=map&origin=yandex-maps-viber-bot&pt=27.5195996%2C53.9106946%2Cya_ru&lang=ru_RU&ll=27.5195996%2C53.9106946&z=17" } }
But this works without any issues on Qt 5.15.2
Probably related to QTBUG-77308.
- relates to
-
QTBUG-77308 Flow control error when loading https://yandex.ru via HTTP/2
-
- Closed
-